# gcp-rust-blog-public

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  SECURITY.md  WARP.md
content/: banner.html  home.html  layout.html  not_found.html
content/posts/: first-post.md
docs/: INFRASTRUCTURE.md  SECURITY.md
infra/: load_balancer.tf  main.tf  outputs.tf  prod.tfvars.template  variables.tf
scripts/: deploy-cloud-run.sh
src/: main.rs
