[package]
name = "gcp-rust-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
pulldown-cmark = "0.10"
tower-http = { version = "0.5", features = ["fs"] }
